OLAM-9 Implement Access Code Generation and fix 68 Sonar Issues.